# video-downloader-cli

./: .gitignore  .replit  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  replit.nix
tests/: __init__.py  test_downloader.py  test_url_validator.py
video_downloader/: __init__.py  cli.py  clipboard_monitor.py  config.py  downloader.py  logger.py  ui.py  url_validator.py
