[project]
name = "video-downloader-cli"
version = "1.0.0"
description = "CLI tool that monitors clipboard for video links and downloads them automatically"
requires-python = ">=3.11"
authors = [
    {name = "Video Downloader Team"}
]
dependencies = [
    "build>=1.2.2.post1",
    "click>=8.1.8",
    "pip>=25.0.1",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
    "yt-dlp>=2025.2.19",
]

[project.scripts]
video-downloader = "video_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_downloader"]
